--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "short_name": "RappearsDapp",
-    "name": "Rappears Dapp",
-    "description": "Collect and earn rewards",
+    "short_name": "Galaxy Villains Dapp",
+    "name": "Galaxy Villains Dapp",
+    "description": "Get in early on the official presale",
     "icons": [
       {
         "src": "favicon.png",
